完善df命令和ping server

--- a/conf/df_monitor_server.properties
+++ b/conf/df_monitor_server.properties
@@ -1,1 +1,1 @@
-server_list=root@115.159.2.233:Iknowthat@@!221
+server_list=[{user:root,host:115.159.2.233,password:Iknowthat@@!221,owner:zhuming.song@szwindoor.com}]
