--- a/conf/serviceList.properties
+++ b/conf/serviceList.properties
@@ -1,1 +1,1 @@
-externalServer=192.184.51.130@B1.14.yellow,192.184.41.50@B1.4.black,192.184.40.114@B1.4.blue
+externalServer=[{host:192.184.51.130,device:B1.14.yellow},{host:192.184.41.50,device:B1.4.black},{host:192.184.40.114,device:B1.4.blue}]
