--- a/conf/serviceList.properties
+++ b/conf/serviceList.properties
@@ -1,1 +1,1 @@
-externalServer=[{host:192.184.51.130,device:B1.14.yellow},{host:192.184.41.50,device:B1.4.black},{host:192.184.40.114,device:B1.4.blue}]
+externalServer=[{host:192.184.51.130,device:B1.14.yellow,owner:zhuming.song@szwindoor.com},{host:192.184.41.50,device:B1.4.black,owner:zhuming.song@szwindoor.com},{host:192.184.40.114,device:B1.4.blue,owner:zhuming.song@szwindoor.com}]
